<!--
  ~ Copyright 2019 The Android Open Source Project
  ~ Copyright 2021 eLIKAS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">eLIKAS</string>
    <string name="title_back">Back</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="whoops">Whoops!</string>
    <string name="ok">OK</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="offline_mode">Offline mode</string>
    <string name="gps_enable">Enable GPS</string>
    <string name="location_enable">Enable Location Access</string>
    <string name="launch_activity">Launch activity</string>

    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="app_using_location">Location is being accessed by the app.</string>
    <string name="no_location_detected">No location detected. Make sure GPS location is enabled on the device.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_rationale">eLIKAS needs to access location <br /> for couriers to deliver supplies</string>
    <string name="gps_permission_rationale">GPS must be turned on to access the app.</string>
    <string name="connection_problem">There seems to be a problem with your network connection.</string>
    <string name="check_connection">Please check your internet connection.</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.elikas.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">Current location not found</string>

    <string name="zero">0</string>

    <string name="evacuation_center">Evacuation Center:</string>
    <string name="evacuation_center_addr">Del Rosario Elementary School</string>
    <string name="total_capacity">total capacity</string>
    <string name="total_capacity_dummy">100</string>
    <string name="admit">Admit</string>
    <string name="discharge">Discharge</string>
    <string name="view">View</string>
    <string name="evacuees">evacuees</string>
    <string name="supply">supply</string>
    <string name="dispense">Dispense</string>
    <string name="request">Request</string>

    <string name="offline_message">
        <!--Offline mode message here.... <br />
        remind the user that once internet connection is back, they will be redirected to webview-->
        <b>Reminder:</b> \n When internet connection becomes available, you will be redirected back to the Main Screen.
    </string>
    <string name="list">List of Residents</string>
    <string name="search_name">Search name</string>
    <string name="cancel">Cancel</string>
    <string name="dispense_supply">Dispense Supply</string>
    <string name="request_supply">Request Supply</string>
    <string name="disaster_response">Disaster Response</string>
    <string name="relief_recipient">Relief Recipient</string>
    <string name="Select">Select</string>
    <string name="supply_type">Supply Type</string>
    <string name="quantity">Quantity</string>

    <string name="food_packs">Food Packs</string>
    <string name="water">Water</string>
    <string name="clothes">Clothes</string>
    <string name="hygiene_kit">Hygiene Kit</string>
    <string name="medicine">Medicine</string>
    <string name="esa">Emergency Shelter Assistance</string>
    <string name="add">Increase the quantity</string>
    <string name="minus">Decrease the quantity</string>
    <string name="note">Note</string>

    <string name="barangay">Barangay:</string>
    <string name="total_residents">Total Residents</string>
    <string name="add_supply">Add Supply</string>
    <string name="source">Source</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="text_add">Add</string>
    <string name="non_evacuees">non-evacuees</string>
    <string name="family_rep">Family Representative</string>

    <string name="dummy_sms">
        September 20, 2021, 8:45 am <br/>
        Del Rosario Barangay Hall Evacuees Record <br/>
        <br/>
        Total Evacuees: 89 <br/>
        Female: 40 <br/>
        Male: 49 <br/>
        <br/>
        Sectoral Classification Breakdown: <br/>
        Children: <br/>
        Lactating: <br/>
        Pregnant: <br/>
        PWD: <br/>
        Senior Citizen: <br/>
        Solo Parent: <br/>
        <br/>
        -eLIKAS
    </string>

    <string-array name="supply_type_array">
        <item>Food Packs</item>
        <item>Water</item>
        <item>Hygiene Kit</item>
        <item>Mars</item>
        <item>Mecicine</item>
        <item>Clothes</item>
        <item>ESA</item>
    </string-array>

    <string name="no_internet">No Internet Connection</string>

    <string name="title_activity_offline_mode">Home</string>

</resources>