<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/add_supply"
            android:textSize="20sp"
            android:theme="@style/Widget.TextView.SemiBold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/supply_type"
            android:textSize="14sp"
            android:theme="@style/Widget.TextView.Normal" />

        <Spinner
            android:id="@+id/spinner_dr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity"
            android:textSize="14sp"
            android:theme="@style/Widget.TextView.Normal" />

        <EditText
            android:id="@+id/txtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_offline_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/source"
            android:textSize="14sp"
            android:theme="@style/Widget.TextView.Normal" />

        <EditText
            android:id="@+id/txtSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_offline_message"
            android:minHeight="48dp"
            android:hint="@string/enter_source"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnAdmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:text="@string/text_add"
            android:theme="@style/Widget.Button.Secondary" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/cancel"
            style="@style/Widget.Button.SecondaryOutlined"/>

    </LinearLayout>

</ScrollView>