<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:text="@string/dispense_supply"
            android:textSize="20sp"
            android:theme="@style/Widget.TextView.SemiBold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/disaster_response"
            android:textSize="14sp"
            android:theme="@style/Widget.TextView.Normal" />

        <Spinner
            android:id="@+id/spinner_dr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/relief_recipient"
            android:textSize="14sp"
            android:theme="@style/Widget.TextView.Normal" />

        <Spinner
            android:id="@+id/spinner_rr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtSupplyType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/supply_type"
                android:textSize="16sp"
                android:layout_alignParentStart="true"
                android:theme="@style/Widget.TextView.Bold" />

            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/quantity"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:theme="@style/Widget.TextView.Bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/supply_type"
                android:textSize="16sp"
                android:theme="@style/Widget.TextView.Bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:text="@string/quantity"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:theme="@style/Widget.TextView.Bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAdmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="94dp"
            android:text="@string/dispense"
            android:theme="@style/Widget.Button.Secondary" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.Button.SecondaryOutlined"/>

    </LinearLayout>

</ScrollView>