<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.error.NoInternetActivity"
    android:padding="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSendDataOffline"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="260dp"
            android:contentDescription="@string/connection_problem"
            android:src="@drawable/ic_no_internet_mascott"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/whoops"
            android:textSize="42sp"
            android:theme="@style/Widget.TextView.Bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:lineSpacingExtra="24sp"
            android:lineSpacingMultiplier="0"
            android:text="@string/connection_problem"
            android:textSize="18sp"
            android:theme="@style/Widget.TextView.Medium" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:lineSpacingExtra="24sp"
            android:lineSpacingMultiplier="0"
            android:text="@string/check_connection"
            android:textSize="18sp"
            android:theme="@style/Widget.TextView.Normal" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/or"
            android:theme="@style/Widget.TextView.Normal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSendDataOffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/offline_mode"
        android:theme="@style/Widget.Button.Base" />

</RelativeLayout>